--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
-		"start": "svelte-kit start"
+		"start": "scripts/start.sh"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "next",
@@ -18,5 +18,8 @@
 		"@fortawesome/free-solid-svg-icons": "^5.15.3",
 		"svelte-fa": "^2.2.0",
 		"sveltestrap": "5.0.0-beta.3"
+	},
+	"engines": {
+		"node": "15.x"
 	}
 }
