--- a/package.json
+++ b/package.json
@@ -6,18 +6,17 @@
 		"build": "svelte-kit build",
 		"start": "scripts/start.sh"
 	},
-	"devDependencies": {
-		"@sveltejs/adapter-node": "next",
-		"@sveltejs/kit": "^1.0.0-next.74",
-		"svelte": "^3.29.0",
-		"vite": "^2.1.0"
-	},
+	"devDependencies": {},
 	"type": "module",
 	"dependencies": {
 		"@fortawesome/free-brands-svg-icons": "^5.15.3",
 		"@fortawesome/free-solid-svg-icons": "^5.15.3",
+		"@sveltejs/adapter-node": "next",
+		"@sveltejs/kit": "^1.0.0-next.74",
+		"svelte": "^3.29.0",
 		"svelte-fa": "^2.2.0",
-		"sveltestrap": "5.0.0-beta.3"
+		"sveltestrap": "5.0.0-beta.3",
+		"vite": "^2.1.0"
 	},
 	"engines": {
 		"node": "15.x"
