Re-added start script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
+		"start": "scripts/start.sh",
 		"preview": "svelte-kit preview"
 	},
 	"devDependencies": {
