--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
 	"devDependencies": {
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
-		"svelte": "^3.29.0",
-		"vite": "^2.1.0"
+		"svelte": "^3.34.0"
 	},
 	"type": "module",
 	"dependencies": {
 		"@fortawesome/free-brands-svg-icons": "^5.15.3",
 		"@fortawesome/free-solid-svg-icons": "^5.15.3",
 		"svelte-fa": "^2.2.0",
-		"sveltestrap": "5.0.0-beta.3"
+		"sveltestrap": "5.1.1"
 	}
 }
